--- a/css/overview.css
+++ b/css/overview.css
@@ -4,6 +4,7 @@
 	background-size: cover;
 	background-position: center center;
 	height: 450px;
+	margin: 0 0;
 	margin-top: 1px;
 	margin-bottom: 0;
 	padding: 0 0;
@@ -11,10 +12,11 @@
 
 .jumbotron h1
 {
+	margin: 0 0;
 	font-size: 30px;
 	font-weight: bold;
 	margin-top: 25px;
-	margin-left: 25px;
+	padding-left: 25px;
 }
 
 .nocturnalhunt .jumbotron
